@startuml pull_state_cd

class Vector2i {
    + x: int
    + y: int
}

class Cue {
    + positionStart: Vector2i
    + positionEnd: Vector2i
}

class Ball {
    + number: int
    + position: Vector2i
    + type: Enum('SOLID', 'STRIPED')
}

Cue *--> Vector2i
Ball *--> Vector2i

class PoolState {
    + balls: Ball[]
    + cues: Cue[]
}

PoolState "16" o--> "1" Ball
PoolState "2" o--> "1" Cue

@enduml
